# cns

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: agents.yaml.example  gigabrain.docker.yaml  gigabrain.yaml.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: api.py  config.py  dispatcher.py  prompts.py  registry.py  runtime.py  worker.py
backend/app/api/: frontend.py  gate_items.py  graph.py  health.py  hotspots.py  nodes.py  search.py  stream.py
backend/app/capture/: api.py  normalizer.py
backend/app/cli/: agents.py  capture.py  umap.py
backend/app/db/: edges.py  kuzu.py  nodes.py  schemas.py  vector.py
backend/app/detectors/: base.py  conflict.py  duplicate.py  llm_clients.py  sidecar.py
backend/app/embeddings/: factory.py  ollama.py  provider.py
backend/app/events/: bus.py  schemas.py
backend/app/gate/: api.py  resolver.py
backend/app/sparring/: engine.py  llm.py  prompts.py  retrieval.py  router.py
backend/app/telemetry/: otel.py
backend/app/umap/: recompute.py
backend/app/watchers/: debounce.py  obsidian.py
backend/kuzu_schema/: 001_nodes.cypher  002_edges.cypher  003_indexes.cypher
backend/tests/: test_config.py  test_main_lifespan.py
backend/tests/test_agents/: test_api.py  test_config.py  test_dispatcher.py  test_e2e_fire_neuron.py  test_registry.py  test_runtime.py  test_worker.py  test_worker_parallel.py
backend/tests/test_api/: test_frontend.py  test_gate_items.py  test_graph.py  test_health.py  test_hotspots.py  test_nodes_route.py  test_search.py  test_stream.py
backend/tests/test_capture/: test_api.py  test_normalizer.py
backend/tests/test_cli/: test_agents.py  test_capture.py  test_umap.py
backend/tests/test_db/: test_edges.py  test_kuzu.py  test_nodes.py  test_schemas.py  test_vector.py
backend/tests/test_detectors/: test_conflict.py  test_duplicate.py  test_engine_dispatch.py  test_llm_clients.py  test_sidecar.py
backend/tests/test_e2e/: test_all_sources.py  test_capture_renders.py  test_capture_to_spar.py
backend/tests/test_embeddings/: test_factory.py
backend/tests/test_events/: test_bus.py
backend/tests/test_gate/: test_resolver.py
backend/tests/test_sparring/: test_engine.py  test_llm.py  test_retrieval.py  test_router.py  test_router_integration.py
backend/tests/test_telemetry/: test_otel.py
outcome_critical_attribution/: README.md  pyproject.toml
outcome_critical_attribution/tests/: test_ablation.py  test_atomization.py  test_atoms.py  test_attribution_graph.py  test_metrics.py  test_oracle.py  test_support_extractor.py  test_trajectory.py
(+131 files in other folders)
