[project]
name = "gigabrain"
version = "0.1.0"
description = "Open-source CNS for agentic teams"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "kuzu>=0.4",
    "sqlite-vec>=0.1.0",
    "ollama>=0.2",
    "anthropic>=0.61.0",
    "pydantic-ai>=1.0.0",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.1",
    "umap-learn>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
gigabrain = "app.cli.agents:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff.lint]
# E501: line-too-long — LLM prompt strings have long natural-language lines
per-file-ignores = { "app/sparring/prompts.py" = ["E501"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
